fix pom, services